fixed wrap on skills

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,6 @@ div.skills-cont {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 80px;
   background-color: #ffffff;
   padding-bottom: 30px;
 }
@@ -251,6 +250,8 @@ div.skills {
 div.skills > ul {
   display: flex;
   margin-right: 25px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 div.skills > ul > li {
